# com.webos.service.hfp

./: CMakeLists.txt  README.md  oss-pkg-info.yaml
files/conf/pmlog/: webos-hfp-service.conf.in
files/launch/: webos-hfp-service.conf.in
files/sysbus/: com.webos.service.hfp.api.json  com.webos.service.hfp.groups.json  com.webos.service.hfp.json.prv.in  com.webos.service.hfp.json.pub.in  com.webos.service.hfp.perm.json  com.webos.service.hfp.role.json.in  com.webos.service.hfp.service.in  com.webos.service.hfp.service.prv.in
files/xml/: ofono.xml
src/: bluetootherrors.cpp  bluetootherrors.h  bluetoothhfpservice.cpp  bluetoothhfpservice.h  config.h.in  dbusutils.cpp  defines.h  hfprole.cpp  hfprole.h  logging.h  ls2utils.cpp  ls2utils.h  main.cpp  utils.cpp  utils.h
src/AG/: hfpagcallstatus.cpp  hfpagcallstatus.h  hfpagrole.cpp  hfpagrole.h  hfpagsubscribe.cpp  hfpagsubscribe.h
src/HF/: hfpdeviceinfo.cpp  hfpdeviceinfo.h  hfphfcallstatus.h  hfphfdefines.h  hfphfdevicestatus.cpp  hfphfdevicestatus.h  hfphfls2call.cpp  hfphfls2call.h  hfphfls2data.h  hfphfrole.cpp  hfphfrole.h  hfphfsubscribe.cpp  hfphfsubscribe.h  hfpofonocallvolume.cpp  hfpofonocallvolume.h  hfpofonohandsfree.cpp  hfpofonohandsfree.h  hfpofonomanager.cpp  hfpofonomanager.h  hfpofonomodem.cpp  hfpofonomodem.h  hfpofononetworkregistration.cpp  hfpofononetworkregistration.h  hfpofonovoicecall.cpp  hfpofonovoicecall.h  hfpofonovoicecallmanager.cpp  hfpofonovoicecallmanager.h
